syntax = "proto3";

package protos;

import "protos/types.proto";

option go_package = "/peer";

service Peer {
    rpc SendFile(File) returns (stream FileData) {}
}